system/ipam-capi-remote/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ipam-capi-ingress-from-kube-apiserver
spec:
  ingress:
  - ports:
    - port: 9443
      protocol: TCP
    - port: 9444
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: kubernetes
          role: apiserver
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ipam-capi-remote
      app.kubernetes.io/name: ipam-capi-remote
      control-plane: controller-manager
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-apiserver-egress-to-ipam-capi
spec:
  egress:
  - ports:
    - port: 9443
      protocol: TCP
    - port: 9444
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: ipam-capi-remote
          app.kubernetes.io/name: ipam-capi-remote
          control-plane: controller-manager
  podSelector:
    matchLabels:
      app: kubernetes
      role: apiserver
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ipam-capi-ingress-from-kube-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ipam-capi-remote
      app.kubernetes.io/name: ipam-capi-remote
      control-plane: controller-manager
  ingress:
  - ports:
    - protocol: TCP
      port: 8082
    - namespaceSelector:
        matchLabels:
          name: kube-monitoring
  policyTypes:
  - Ingress
